# OOP_practice

./: README.md  pyproject.toml
htmlcov/: index.html
src/: classes.py  get_info.py  main.py
tests/: conftest.py  test_classes.py
